--- a/default/mako/core.ini
+++ b/default/mako/core.ini
@@ -27,3 +27,6 @@ on-button-left=exec sh -c 'omarchy-notification-dismiss "Update System"; omarchy
 
 [summary~="Learn Keybindings"]
 on-button-left=exec sh -c 'omarchy-notification-dismiss "Learn Keybindings"; omarchy-menu-keybindings'
+
+[summary~="Set Up eclipseOS"]
+on-button-left=exec sh -c 'omarchy-notification-dismiss "Set Up eclipseOS"; eclipseOS-setup'
