--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -21,3 +21,5 @@ source = ~/.config/hypr/autostart.conf
 
 # Add any other personal Hyprland configuration below
 # windowrule = workspace 5, class:qemu
+
+env = xx_color_management_v4,true
