--- a/config/hypr/hypridle.conf
+++ b/config/hypr/hypridle.conf
@@ -1,22 +1,22 @@
 general {
     lock_cmd = omarchy-lock-screen                         # lock screen and 1password
     before_sleep_cmd = loginctl lock-session               # lock before suspend.
-    after_sleep_cmd = hyprctl dispatch dpms on             # to avoid having to press a key twice to turn on the display.
+    after_sleep_cmd = hyprctl dispatch dpms on             # avoid needing extra keypress to wake
     inhibit_sleep = 3                                      # wait until screen is locked
 }
 
 listener {
-    timeout = 150                                             # 2.5min
-    on-timeout = pidof hyprlock || omarchy-launch-screensaver # start screensaver (if we haven't locked already)
+    timeout = 150                                           # 2.5min
+    on-timeout = [ ! "$(pidof StarCitizen.exe)" ] && (pidof hyprlock || omarchy-launch-screensaver)
 }
 
 listener {
-    timeout = 300                      # 5min
-    on-timeout = loginctl lock-session # lock screen when timeout has passed
+    timeout = 300                                           # 5min
+    on-timeout = [ ! "$(pidof StarCitizen.exe)" ] && loginctl lock-session
 }
 
 listener {
-    timeout = 330                                            # 5.5min
-    on-timeout = hyprctl dispatch dpms off                   # screen off when timeout has passed
-    on-resume = hyprctl dispatch dpms on && brightnessctl -r # screen on when activity is detected
+    timeout = 330                                           # 5.5min
+    on-timeout = [ ! "$(pidof StarCitizen.exe)" ] && hyprctl dispatch dpms off
+    on-resume = hyprctl dispatch dpms on && brightnessctl -r
 }
