--- a/config/waybar/config.jsonc
+++ b/config/waybar/config.jsonc
@@ -3,10 +3,22 @@
   "layer": "top",
   "position": "top",
   "spacing": 0,
+  "margin-top":6,
+  "margin-left":4,
+  "margin-right":4,
   "height": 26,
-  "modules-left": ["custom/omarchy", "hyprland/workspaces"],
-  "modules-center": ["clock", "custom/update", "custom/screenrecording-indicator"],
-  "modules-right": [
+  "modules-left": [
+    "custom/omarchy",
+    "hyprland/workspaces",
+    "clock", 
+    "custom/mpris-spacer",
+    "idle_inhibitor",
+    "custom/mpris-spacer"
+  ],
+  "modules-center": ["custom/window","custom/update", "custom/screenrecording-indicator"],
+  "modules-right": ["custom/calcurse", "custom/mpris-spacer",
+    "mpris",
+    "custom/mpris-spacer",
     "group/tray-expander",
     "bluetooth",
     "network",
@@ -28,7 +40,6 @@
       "7": "7",
       "8": "8",
       "9": "9",
-      "10": "0",
       "active": "󱓻"
     },
     "persistent-workspaces": {
@@ -39,11 +50,48 @@
       "5": []
     }
   },
+  "idle_inhibitor": {
+    "format": "{icon}",
+    "format-icons": {
+		  "activated": "",
+		  "deactivated": ""
+    },
+    "tooltip" : false,
+    "timeout": -1,  // -1 = inhibit indefinitely
+  },
+  "custom/window": {
+    "exec": "~/.config/waybar/scripts/window-title-signal.sh",
+    "interval": 0,
+    "tooltip": false
+  },
   "custom/omarchy": {
-    "format": "<span font='omarchy'>\ue900</span>",
-    "on-click": "omarchy-menu",
-    "on-click-right": "xdg-terminal-exec",
-    "tooltip-format": "Omarchy Menu\n\nSuper + Alt + Space"
+    "format": "",
+    "tooltip-format": "Arch Menu\n\nSuper + Alt + Space",
+    "on-click": "omarchy-menu"
+  },
+  "mpris": {
+    "format": "{player_icon} {status_icon} {title} – {artist}",
+    "format-paused": "{player_icon} {status_icon} {title} – {artist}",
+    "format-stopped": "{player_icon}",
+    "player-icons": {
+      "default": "",
+      "spotify": ""
+    },
+    "status-icons": {
+      "paused": ""
+    },
+    "interval": 1,
+    "tooltip": false,
+    "on-click-left": "playerctl play-pause",
+    "on-click-right": "playerctl next",
+    "on-click-middle": "playerctl previous",
+    "on-scroll-up": "playerctl volume 0.05+",
+    "on-scroll-down": "playerctl volume 0.05-",
+    "max-length": 40
+  },
+  "custom/mpris-spacer": {
+    "format": "   ",
+    "interval": 0
   },
   "custom/update": {
     "format": "",
@@ -51,20 +99,20 @@
     "on-click": "omarchy-launch-floating-terminal-with-presentation omarchy-update",
     "tooltip-format": "Omarchy update available",
     "signal": 7,
-    "interval": 21600
+    "interval": 3600
   },
 
   "cpu": {
     "interval": 5,
     "format": "󰍛",
-    "on-click": "omarchy-launch-or-focus-tui btop",
-    "on-click-right": "alacritty"
+    "on-click": "$TERMINAL -e btop"
   },
   "clock": {
-    "format": "{:L%A %H:%M}",
+    "format": "{:%H:%M:%S %A %d %B}",
+    "interval": 1,
     "format-alt": "{:L%d %B W%V %Y}",
     "tooltip": false,
-    "on-click-right": "omarchy-launch-floating-terminal-with-presentation omarchy-tz-select"
+    "on-click-right": "omarchy-cmd-tzupdate"
   },
   "network": {
     "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"],
@@ -101,14 +149,13 @@
   "bluetooth": {
     "format": "",
     "format-disabled": "󰂲",
-    "format-connected": "󰂱",
-    "format-no-controller": "",
+    "format-connected": "",
     "tooltip-format": "Devices connected: {num_connections}",
-    "on-click": "omarchy-launch-bluetooth"
+    "on-click": "blueberry"
   },
   "pulseaudio": {
     "format": "{icon}",
-    "on-click": "omarchy-launch-or-focus-tui wiremix",
+    "on-click": "$TERMINAL --class=Wiremix -e wiremix",
     "on-click-right": "pamixer -t",
     "tooltip-format": "Playing at {volume}%",
     "scroll-step": 5,
@@ -126,7 +173,7 @@
     "modules": ["custom/expand-icon", "tray"]
   },
   "custom/expand-icon": {
-    "format": "",
+    "format": " ",
     "tooltip": false
   },
   "custom/screenrecording-indicator": {
@@ -135,8 +182,15 @@
     "signal": 8,
     "return-type": "json"
   },
+  "custom/calcurse": {
+  "format": "  {}",
+  "exec": "~/.config/waybar/scripts/calcurse-summary",
+  "interval": 60,
+  "on-click": "~/.config/waybar/scripts/calcurse-popup",
+  "tooltip": false
+  },
   "tray": {
     "icon-size": 12,
-    "spacing": 17
+    "spacing": 12
   }
 }
