--- a/config/hypr/bindings.conf
+++ b/config/hypr/bindings.conf
@@ -8,6 +8,7 @@ bindd = SUPER, B, Browser, exec, $browser
 bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
 bindd = SUPER ALT, M, Music, exec, spotify &
 bindd = SUPER, N, Editor, exec, omarchy-launch-editor
+unbind = SUPER, T
 bindd = SUPER, T, Activity, exec, $terminal -e btop
 
 # If your web app url contains #, type it as ## to prevent hyperland treat it as comments
