--- a/config/hypr/bindings.conf
+++ b/config/hypr/bindings.conf
@@ -27,7 +27,7 @@ unbind = SUPER ALT, SPACE
 unbind = SUPER, V
 bindd = SUPER, W, Toggle floating, togglefloating
 bindd = SUPER, D, Launch apps, exec, walker -p "Start…"
-bindd = SUPER SHIFT, D, Omarchy menu, exec, omarchy-menu
+bindd = SUPER SHIFT, D, Omarchy menu, exec, eclipse-menu
 
 bind = SUPER, S, togglespecialworkspace, myspace
 bind = SUPER_SHIFT, S, movetoworkspacesilent, special:myspace
