--- a/default/hypr/bindings/utilities.conf
+++ b/default/hypr/bindings/utilities.conf
@@ -1,16 +1,16 @@
 # Menus
 bindd = SUPER, SPACE, Launch apps, exec, omarchy-launch-walker
 bindd = SUPER CTRL, E, Emoji picker, exec, omarchy-launch-walker -m symbols
-bindd = SUPER ALT, SPACE, Omarchy menu, exec, omarchy-menu
-bindd = SUPER, ESCAPE, System menu, exec, omarchy-menu system
-bindld = , XF86PowerOff, Power menu, exec, omarchy-menu system
+bindd = SUPER ALT, SPACE, Omarchy menu, exec, eclipse-menu
+bindd = SUPER, ESCAPE, System menu, exec, eclipse-menu system
+bindld = , XF86PowerOff, Power menu, exec, eclipse-menu system
 bindd = SUPER, K, Show key bindings, exec, omarchy-menu-keybindings
 bindd = , XF86Calculator, Calculator, exec, gnome-calculator
 
 # Aesthetics
 bindd = SUPER SHIFT, SPACE, Toggle top bar, exec, omarchy-toggle-waybar
 bindd = SUPER CTRL, SPACE, Next background in theme, exec, omarchy-theme-bg-next
-bindd = SUPER SHIFT CTRL, SPACE, Theme menu, exec, omarchy-menu theme
+bindd = SUPER SHIFT CTRL, SPACE, Theme menu, exec, eclipse-menu theme
 bindd = SUPER, BACKSPACE, Toggle window transparency, exec, hyprctl dispatch setprop "address:$(hyprctl activewindow -j | jq -r '.address')" opaque toggle
 bindd = SUPER SHIFT, BACKSPACE, Toggle workspace gaps, exec, omarchy-hyprland-workspace-toggle-gaps
 
@@ -35,11 +35,11 @@ bindd = SHIFT CTRL, F2, Apple Display full brightness, exec, omarchy-cmd-apple-d
 # Captures
 bindd = , PRINT, Screenshot with editing, exec, omarchy-cmd-screenshot
 bindd = SHIFT, PRINT, Screenshot to clipboard, exec, omarchy-cmd-screenshot smart clipboard
-bindd = ALT, PRINT, Screenrecording, exec, omarchy-menu screenrecord
+bindd = ALT, PRINT, Screenrecording, exec, eclipse-menu screenrecord
 bindd = SUPER, PRINT, Color picker, exec, pkill hyprpicker || hyprpicker -a
 
 # File sharing
-bindd = SUPER CTRL, S, Share, exec, omarchy-menu share
+bindd = SUPER CTRL, S, Share, exec, eclise-menu share
 
 # Waybar-less information
 bindd = SUPER CTRL, T, Show time, exec, notify-send "    $(date +"%A %H:%M  —  %d %B W%V %Y")"
