--- a/config/hypr/input.conf
+++ b/config/hypr/input.conf
@@ -16,8 +16,8 @@ input {
   # sensitivity = 0.35
 
   touchpad {
-    Use natural (inverse) scrolling
-    # natural_scroll = true
+    # Use natural (inverse) scrolling
+    natural_scroll = true
 
     # Use two-finger clicks for right-click instead of lower-right corner
     # clickfinger_behavior = true
