Hyprland 0.53 update to window and layer rules v3

--- a/config/hypr/bindings.conf
+++ b/config/hypr/bindings.conf
@@ -39,6 +39,6 @@ bind = SUPER, A, togglespecialworkspace, random
 bind = SUPER_SHIFT, A, movetoworkspacesilent, special:random
 
 bind = SUPER, V, exec, alacritty --class clipse -e clipse
-windowrulev2 = float, class:(clipse)
-windowrulev2 = center, floating:1, class:(clipse)
+windowrule = float on, match:class (clipse)
+windowrule = center on, match:float 1, match:class (clipse)
 bind = SUPER, C, exec, ~/.config/rofi/rofi-calc.sh
