--- a/config/hypr/looknfeel.conf
+++ b/config/hypr/looknfeel.conf
@@ -16,6 +16,5 @@ decoration {
     rounding = 8
 }
 
-layerrule = blur, waybar 
-layerrule = ignorezero, waybar 
-layerrule = ignorealpha
+layerrule = blur on, ignore_alpha 0, match:namespace waybar
+layerrule = ignore_alpha 0
