--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -18,10 +18,13 @@ monitor=,preferred,auto,auto
 # monitor = DP-5, 6016x3384@60, auto, 2
 # monitor = eDP-1, 2880x1920@120, auto, 2
 
-# Equinox:
+# Equinox (Main PC with 3 Monitors):
 # monitor = DP-1, 1366x768@59, 0x0, 1
 # monitor = DP-2, 1920x1080@240, 1366x0, 1
 # monitor = HDMI-A-1, 1920x1080@60, 3286x0, 1  
+
+# Laptop:
+# monitor =eDP-1, 1920x1080@59,0x0,1
 
 # Workspace Config
 
