--- a/default/hypr/apps/1password.conf
+++ b/default/hypr/apps/1password.conf
@@ -1,2 +1,1 @@
-windowrule = noscreenshare, class:^(1[p|P]assword)$
-windowrule = tag +floating-window, class:^(1[p|P]assword)$
+windowrule = no_screen_share on, tag +floating-window, match:class ^(1[p|P]assword)$
