--- a/default/hypr/apps/webcam-overlay.conf
+++ b/default/hypr/apps/webcam-overlay.conf
@@ -1,6 +1,3 @@
 # Webcam overlay for screen recording
-windowrule = float, title:WebcamOverlay
-windowrule = pin, title:WebcamOverlay
-windowrule = noinitialfocus, title:WebcamOverlay
-windowrule = nodim, title:WebcamOverlay
-windowrule = move 100%-w-40 100%-w-40, title:WebcamOverlay # There's a typo in the hyprland rule so 100%-w on the height param is actually correct here
+windowrule = float on, pin on, no_initial_focus on, no_dim on, match:title WebcamOverlay
+windowrule = move ((monitor_w*1)-window_w-40) ((monitor_h*1)-window_h-40), match:title WebcamOverlay # There's a typo in the hyprland rule so 100%-w on the height param is actually correct here
