--- a/default/hypr/apps/bitwarden.conf
+++ b/default/hypr/apps/bitwarden.conf
@@ -1,2 +1,1 @@
-windowrule = noscreenshare, class:^(Bitwarden)$
-windowrule = tag +floating-window, class:^(Bitwarden)$
+windowrule = no_screen_share on, tag +floating-window, match:class ^(Bitwarden)$
