--- a/default/hypr/apps/localsend.conf
+++ b/default/hypr/apps/localsend.conf
@@ -1,3 +1,2 @@
 # Float LocalSend and fzf file picker
-windowrule = float, class:(Share|localsend)
-windowrule = center, class:(Share|localsend)
+windowrule = float on, center on, match:class (Share|localsend)
