--- a/default/hypr/apps/retroarch.conf
+++ b/default/hypr/apps/retroarch.conf
@@ -1,4 +1,1 @@
-windowrule = fullscreen, class:com.libretro.RetroArch
-windowrule = opacity 1 1, class:com.libretro.RetroArch
-windowrule = idleinhibit fullscreen, class:com.libretro.RetroArch
-
+windowrule = fullscreen on, opacity 1 1, idle_inhibit fullscreen, match:class com.libretro.RetroArch
