--- a/default/hypr/apps/steam.conf
+++ b/default/hypr/apps/steam.conf
@@ -1,7 +1,4 @@
 # Float Steam
-windowrule = float, class:steam
-windowrule = center, class:steam, title:Steam
-windowrule = opacity 1 1, class:steam
-windowrule = size 1100 700, class:steam, title:Steam
-windowrule = size 460 800, class:steam, title:Friends List
-windowrule = idleinhibit fullscreen, class:steam
+windowrule = float on, opacity 1 1, idle_inhibit fullscreen, match:class steam
+windowrule = center on, size 1100 700, match:class steam, match:title Steam
+windowrule = size 460 800, match:class steam, match:title Friends List
