--- a/default/pacman/pacman.conf
+++ b/default/pacman/pacman.conf
@@ -17,13 +17,13 @@ LocalFileSigLevel = Optional
 
 # pacman searches repositories in the order defined here
 [core]
-Include = /etc/pacman.d/mirrorlist
+Server = https://geo.mirror.pkgbuild.com/$repo/os/$arch
 
 [extra]
-Include = /etc/pacman.d/mirrorlist
+Server = https://geo.mirror.pkgbuild.com/$repo/os/$arch
 
 [multilib]
-Include = /etc/pacman.d/mirrorlist
+Server = https://geo.mirror.pkgbuild.com/$repo/os/$arch
 
 [omarchy]
 SigLevel = Optional TrustAll
